tests/fixtures/invalid/bad_name.avsc
{
  "type": "record",
  "name": "123Invalid",
  "fields": [
    {"name": "value", "type": "string"}
  ]
}
